--- a/categories.html
+++ b/categories.html
@@ -115,13 +115,18 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/nodejs.html">
-                                nodejs
+                            <a href="/tag/gfw.html">
+                                gfw
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/virtualenv.html">
-                                virtualenv
+                            <a href="/tag/ghost.html">
+                                ghost
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/django.html">
+                                django
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -135,36 +140,6 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/mutex.html">
-                                mutex
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/gfw.html">
-                                gfw
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/uwsgi.html">
-                                uwsgi
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/python.html">
-                                python
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/django.html">
-                                django
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/ghost.html">
-                                ghost
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
                             <a href="/tag/pillow.html">
                                 pillow
                             </a>
@@ -175,13 +150,38 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/session.html">
-                                session
+                            <a href="/tag/uwsgi.html">
+                                uwsgi
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/virtualenv.html">
+                                virtualenv
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
                             <a href="/tag/shadowsocks.html">
                                 shadowsocks
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/session.html">
+                                session
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/mutex.html">
+                                mutex
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/nodejs.html">
+                                nodejs
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="/tag/python.html">
+                                python
                             </a>
                         </li>
                     </ul>
@@ -224,5 +224,20 @@
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
 
+    <!-- Disqus -->
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'vc2tea'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+            var s = document.createElement('script');
+            s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+        }());
+    </script>
+    <!-- End Disqus Code -->
 </body>
 </html>
