--- a/authors.html
+++ b/authors.html
@@ -20,17 +20,19 @@
         <meta property="og:site_name" content="綠茶如是说" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="綠茶如是说"/>
-        <meta property="og:url" content=""/>
+        <meta property="og:url" content="http://vc2tea.com"/>
         <meta property="og:description" content="綠茶如是说"/>
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://vc2tea.com/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="http://vc2tea.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="http://vc2tea.com/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://vc2tea.com/theme/css/style.css" type="text/css"/>
 
+        <link href="http://vc2tea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="綠茶如是说 ATOM Feed"/>
 
 
 
@@ -46,14 +48,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="http://vc2tea.com/" class="navbar-brand">
 綠茶如是说            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+                <li><a href="http://vc2tea.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -65,7 +67,7 @@
         <div class="col-sm-9">
 
     <h1>Authors on 綠茶如是说</h1>
-        <li><a href="/author/lu-cha">綠茶</a> (7)</li>
+        <li><a href="http://vc2tea.com/author/lu-cha">綠茶</a> (7)</li>
         </div>
         <div class="col-sm-3 well well-sm" id="sidebar">
 
@@ -80,86 +82,86 @@
 
 
 
-                <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+                <li class="list-group-item"><a href="http://vc2tea.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group " id="tags">
                         <li class="list-group-item tag-1">
-                            <a href="/tag/redis.html">
+                            <a href="http://vc2tea.com/tag/redis.html">
                                 redis
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
-                            <a href="/tag/nginx.html">
+                            <a href="http://vc2tea.com/tag/nginx.html">
                                 nginx
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/gfw.html">
-                                gfw
+                            <a href="http://vc2tea.com/tag/python.html">
+                                python
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/ghost.html">
-                                ghost
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/django.html">
-                                django
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/security.html">
-                                security
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/pip.html">
-                                pip
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/pillow.html">
-                                pillow
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/cache.html">
-                                cache
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/uwsgi.html">
-                                uwsgi
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/virtualenv.html">
-                                virtualenv
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/shadowsocks.html">
+                            <a href="http://vc2tea.com/tag/shadowsocks.html">
                                 shadowsocks
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/session.html">
-                                session
+                            <a href="http://vc2tea.com/tag/pip.html">
+                                pip
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/mutex.html">
-                                mutex
+                            <a href="http://vc2tea.com/tag/pillow.html">
+                                pillow
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/nodejs.html">
+                            <a href="http://vc2tea.com/tag/cache.html">
+                                cache
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/django.html">
+                                django
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/gfw.html">
+                                gfw
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/nodejs.html">
                                 nodejs
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/python.html">
-                                python
+                            <a href="http://vc2tea.com/tag/virtualenv.html">
+                                virtualenv
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/uwsgi.html">
+                                uwsgi
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/security.html">
+                                security
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/mutex.html">
+                                mutex
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/session.html">
+                                session
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/ghost.html">
+                                ghost
                             </a>
                         </li>
                     </ul>
@@ -194,13 +196,13 @@
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="http://vc2tea.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="http://vc2tea.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="http://vc2tea.com/theme/js/respond.min.js"></script>
 
     <!-- Disqus -->
     <script type="text/javascript">
