--- a/first.html
+++ b/first.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="canonical" href="/first">
+<link rel="canonical" href="http://vc2tea.com/first">
 
         <meta name="author" content="綠茶" />
         <meta name="description" content="重新开 Blog，按照惯例，免不了有些碎碎念，姑且记录下来吧。 算了一下这已经是纯属个人胡言乱语的第4个 Blog 了，她的前辈们到底经历了一些什么东西呢，让我再好好回想一下黑历史 06-07年，正值毕业季的当时写博客大概是一种潮流吧，于是在 Blogcn 上也凑了下热闹，记录下毕业的青涩和刚入职场的点点滴滴，可惜 Blogcn 历经多次变更，最原始的这些内容早已经不存在于比特世界了吧 07年中，由于对 Google 图腾的信仰，将阵地迁移到 Blogspot 去了，可惜由于07年的 GFW 开始肆虐，更多的内容是关于互联网上各种优秀的东西封与被封的记录和吐槽，从此对 GFW 深恶痛绝... 除此以外大概就是一些动画的点评和分享，于是「一入宅门深似海，从此节操是路人了」... 08-09年，玩心又被当时流行的 Wordpress 吸引住了，于是在 HostMonster 买了个便宜的虚拟主机，踏上了各种折腾的旅程，这个时期各种碎碎念都会写一篇东西记录下来，用现在的词汇来说这段时间就是装逼＋文艺逼＋二逼的混合体吧 ..." />
@@ -21,14 +21,18 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://vc2tea.com/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="http://vc2tea.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="http://vc2tea.com/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://vc2tea.com/theme/css/style.css" type="text/css"/>
+
+        <link href="http://vc2tea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="綠茶如是说 ATOM Feed"/>
 
 
-
+        <link href="http://vc2tea.com/feeds/blog.atom.xml" type="application/atom+xml" rel="alternate"
+              title="綠茶如是说 Blog ATOM Feed"/>
 
 </head>
 <body>
@@ -42,14 +46,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="http://vc2tea.com/" class="navbar-brand">
 綠茶如是说            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+                <li><a href="http://vc2tea.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -64,7 +68,7 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/first"
+                    <a href="http://vc2tea.com/first"
                        rel="bookmark"
                        title="Permalink to 綠茶，你还想说什么？">
                         綠茶，你还想说什么？
@@ -109,7 +113,7 @@
             var disqus_shortname = 'vc2tea'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'first';
-                var disqus_url = '/first';
+                var disqus_url = 'http://vc2tea.com/first';
 
             var disqus_config = function () {
                 this.language = "zh";
@@ -146,86 +150,86 @@
 
 
 
-                <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+                <li class="list-group-item"><a href="http://vc2tea.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group " id="tags">
                         <li class="list-group-item tag-1">
-                            <a href="/tag/redis.html">
+                            <a href="http://vc2tea.com/tag/redis.html">
                                 redis
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
-                            <a href="/tag/nginx.html">
+                            <a href="http://vc2tea.com/tag/nginx.html">
                                 nginx
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/gfw.html">
-                                gfw
+                            <a href="http://vc2tea.com/tag/python.html">
+                                python
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/ghost.html">
-                                ghost
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/django.html">
-                                django
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/security.html">
-                                security
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/pip.html">
-                                pip
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/pillow.html">
-                                pillow
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/cache.html">
-                                cache
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/uwsgi.html">
-                                uwsgi
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/virtualenv.html">
-                                virtualenv
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/shadowsocks.html">
+                            <a href="http://vc2tea.com/tag/shadowsocks.html">
                                 shadowsocks
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/session.html">
-                                session
+                            <a href="http://vc2tea.com/tag/pip.html">
+                                pip
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/mutex.html">
-                                mutex
+                            <a href="http://vc2tea.com/tag/pillow.html">
+                                pillow
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/nodejs.html">
+                            <a href="http://vc2tea.com/tag/cache.html">
+                                cache
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/django.html">
+                                django
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/gfw.html">
+                                gfw
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/nodejs.html">
                                 nodejs
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/python.html">
-                                python
+                            <a href="http://vc2tea.com/tag/virtualenv.html">
+                                virtualenv
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/uwsgi.html">
+                                uwsgi
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/security.html">
+                                security
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/mutex.html">
+                                mutex
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/session.html">
+                                session
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/ghost.html">
+                                ghost
                             </a>
                         </li>
                     </ul>
@@ -260,13 +264,13 @@
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="http://vc2tea.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="http://vc2tea.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="http://vc2tea.com/theme/js/respond.min.js"></script>
 
     <!-- Disqus -->
     <script type="text/javascript">
