--- a/redis-static-file-cache.html
+++ b/redis-static-file-cache.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="canonical" href="/redis-static-file-cache">
+<link rel="canonical" href="http://vc2tea.com/redis-static-file-cache">
 
         <meta name="author" content="綠茶" />
         <meta name="keywords" content="redis,cache" />
@@ -22,14 +22,18 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://vc2tea.com/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="http://vc2tea.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="http://vc2tea.com/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://vc2tea.com/theme/css/style.css" type="text/css"/>
+
+        <link href="http://vc2tea.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="綠茶如是说 ATOM Feed"/>
 
 
-
+        <link href="http://vc2tea.com/feeds/blog.atom.xml" type="application/atom+xml" rel="alternate"
+              title="綠茶如是说 Blog ATOM Feed"/>
 
 </head>
 <body>
@@ -43,14 +47,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="http://vc2tea.com/" class="navbar-brand">
 綠茶如是说            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+                <li><a href="http://vc2tea.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -65,7 +69,7 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/redis-static-file-cache"
+                    <a href="http://vc2tea.com/redis-static-file-cache"
                        rel="bookmark"
                        title="Permalink to 用 Redis 缓存静态文件">
                         用 Redis 缓存静态文件
@@ -87,9 +91,9 @@
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/redis.html">redis</a>
+	<a href="http://vc2tea.com/tag/redis.html">redis</a>
         /
-	<a href="/tag/cache.html">cache</a>
+	<a href="http://vc2tea.com/tag/cache.html">cache</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -121,7 +125,7 @@
             var disqus_shortname = 'vc2tea'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'redis-static-file-cache';
-                var disqus_url = '/redis-static-file-cache';
+                var disqus_url = 'http://vc2tea.com/redis-static-file-cache';
 
             var disqus_config = function () {
                 this.language = "zh";
@@ -158,86 +162,86 @@
 
 
 
-                <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+                <li class="list-group-item"><a href="http://vc2tea.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group " id="tags">
                         <li class="list-group-item tag-1">
-                            <a href="/tag/redis.html">
+                            <a href="http://vc2tea.com/tag/redis.html">
                                 redis
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
-                            <a href="/tag/nginx.html">
+                            <a href="http://vc2tea.com/tag/nginx.html">
                                 nginx
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/gfw.html">
-                                gfw
+                            <a href="http://vc2tea.com/tag/python.html">
+                                python
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/ghost.html">
-                                ghost
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/django.html">
-                                django
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/security.html">
-                                security
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/pip.html">
-                                pip
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/pillow.html">
-                                pillow
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/cache.html">
-                                cache
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/uwsgi.html">
-                                uwsgi
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/virtualenv.html">
-                                virtualenv
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="/tag/shadowsocks.html">
+                            <a href="http://vc2tea.com/tag/shadowsocks.html">
                                 shadowsocks
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/session.html">
-                                session
+                            <a href="http://vc2tea.com/tag/pip.html">
+                                pip
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/mutex.html">
-                                mutex
+                            <a href="http://vc2tea.com/tag/pillow.html">
+                                pillow
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/nodejs.html">
+                            <a href="http://vc2tea.com/tag/cache.html">
+                                cache
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/django.html">
+                                django
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/gfw.html">
+                                gfw
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/nodejs.html">
                                 nodejs
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="/tag/python.html">
-                                python
+                            <a href="http://vc2tea.com/tag/virtualenv.html">
+                                virtualenv
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/uwsgi.html">
+                                uwsgi
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/security.html">
+                                security
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/mutex.html">
+                                mutex
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/session.html">
+                                session
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/ghost.html">
+                                ghost
                             </a>
                         </li>
                     </ul>
@@ -272,13 +276,13 @@
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="http://vc2tea.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="http://vc2tea.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="http://vc2tea.com/theme/js/respond.min.js"></script>
 
     <!-- Disqus -->
     <script type="text/javascript">
