--- a/ghost-blogging.html
+++ b/ghost-blogging.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="canonical" href="http://vc2tea.com/ghost-blogging">
+<link rel="canonical" href="http://vc2tea.com/ghost-blogging/">
 
         <meta name="author" content="綠茶" />
         <meta name="keywords" content="ghost,nginx,nodejs" />
@@ -69,7 +69,7 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://vc2tea.com/ghost-blogging"
+                    <a href="http://vc2tea.com/ghost-blogging/"
                        rel="bookmark"
                        title="Permalink to Ghost Blogging">
                         Ghost Blogging
@@ -147,7 +147,7 @@ sudo apt-get -t testing install libc6-dev
             var disqus_shortname = 'vc2tea'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'ghost-blogging';
-                var disqus_url = 'http://vc2tea.com/ghost-blogging';
+                var disqus_url = 'http://vc2tea.com/ghost-blogging/';
 
             var disqus_config = function () {
                 this.language = "zh";
@@ -197,33 +197,8 @@ sudo apt-get -t testing install libc6-dev
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/python.html">
-                                python
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/shadowsocks.html">
-                                shadowsocks
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/pip.html">
-                                pip
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/pillow.html">
-                                pillow
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/cache.html">
-                                cache
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/django.html">
-                                django
+                            <a href="http://vc2tea.com/tag/nodejs.html">
+                                nodejs
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -232,13 +207,8 @@ sudo apt-get -t testing install libc6-dev
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/nodejs.html">
-                                nodejs
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/virtualenv.html">
-                                virtualenv
+                            <a href="http://vc2tea.com/tag/python.html">
+                                python
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -252,8 +222,13 @@ sudo apt-get -t testing install libc6-dev
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/mutex.html">
-                                mutex
+                            <a href="http://vc2tea.com/tag/pip.html">
+                                pip
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/ghost.html">
+                                ghost
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -262,8 +237,33 @@ sudo apt-get -t testing install libc6-dev
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/ghost.html">
-                                ghost
+                            <a href="http://vc2tea.com/tag/shadowsocks.html">
+                                shadowsocks
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/virtualenv.html">
+                                virtualenv
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/pillow.html">
+                                pillow
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/mutex.html">
+                                mutex
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/django.html">
+                                django
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/cache.html">
+                                cache
                             </a>
                         </li>
                     </ul>
