--- a/django-maintain.html
+++ b/django-maintain.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="canonical" href="http://vc2tea.com/django-maintain/">
+<link rel="canonical" href="http://vc2tea.com/django-maintain">
 
         <meta name="author" content="綠茶" />
         <meta name="keywords" content="django,python,uwsgi,nginx,pip,virtualenv,pillow" />
@@ -69,7 +69,7 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://vc2tea.com/django-maintain/"
+                    <a href="http://vc2tea.com/django-maintain"
                        rel="bookmark"
                        title="Permalink to Django 项目维护记">
                         Django 项目维护记
@@ -190,7 +190,7 @@ deactivate
             var disqus_shortname = 'vc2tea'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'django-maintain';
-                var disqus_url = 'http://vc2tea.com/django-maintain/';
+                var disqus_url = 'http://vc2tea.com/django-maintain';
 
             var disqus_config = function () {
                 this.language = "zh";
@@ -240,8 +240,8 @@ deactivate
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/nodejs.html">
-                                nodejs
+                            <a href="http://vc2tea.com/tag/pillow.html">
+                                pillow
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -250,23 +250,8 @@ deactivate
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/python.html">
-                                python
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/uwsgi.html">
-                                uwsgi
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/security.html">
-                                security
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/pip.html">
-                                pip
+                            <a href="http://vc2tea.com/tag/nodejs.html">
+                                nodejs
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -280,8 +265,8 @@ deactivate
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/shadowsocks.html">
-                                shadowsocks
+                            <a href="http://vc2tea.com/tag/cache.html">
+                                cache
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -290,8 +275,18 @@ deactivate
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/pillow.html">
-                                pillow
+                            <a href="http://vc2tea.com/tag/security.html">
+                                security
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/uwsgi.html">
+                                uwsgi
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/python.html">
+                                python
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -300,13 +295,18 @@ deactivate
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/django.html">
-                                django
+                            <a href="http://vc2tea.com/tag/shadowsocks.html">
+                                shadowsocks
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/cache.html">
-                                cache
+                            <a href="http://vc2tea.com/tag/pip.html">
+                                pip
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/django.html">
+                                django
                             </a>
                         </li>
                     </ul>
