--- a/redis-mutex.html
+++ b/redis-mutex.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="canonical" href="http://vc2tea.com/redis-mutex/">
+<link rel="canonical" href="http://vc2tea.com/redis-mutex">
 
         <meta name="author" content="綠茶" />
         <meta name="keywords" content="redis,mutex" />
@@ -69,7 +69,7 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://vc2tea.com/redis-mutex/"
+                    <a href="http://vc2tea.com/redis-mutex"
                        rel="bookmark"
                        title="Permalink to 用 Redis 实现互斥锁">
                         用 Redis 实现互斥锁
@@ -132,7 +132,7 @@
             var disqus_shortname = 'vc2tea'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'redis-mutex';
-                var disqus_url = 'http://vc2tea.com/redis-mutex/';
+                var disqus_url = 'http://vc2tea.com/redis-mutex';
 
             var disqus_config = function () {
                 this.language = "zh";
@@ -182,8 +182,8 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/nodejs.html">
-                                nodejs
+                            <a href="http://vc2tea.com/tag/pillow.html">
+                                pillow
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -192,23 +192,8 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/python.html">
-                                python
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/uwsgi.html">
-                                uwsgi
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/security.html">
-                                security
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/pip.html">
-                                pip
+                            <a href="http://vc2tea.com/tag/nodejs.html">
+                                nodejs
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -222,8 +207,8 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/shadowsocks.html">
-                                shadowsocks
+                            <a href="http://vc2tea.com/tag/cache.html">
+                                cache
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -232,8 +217,18 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/pillow.html">
-                                pillow
+                            <a href="http://vc2tea.com/tag/security.html">
+                                security
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/uwsgi.html">
+                                uwsgi
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/python.html">
+                                python
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
@@ -242,13 +237,18 @@
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/django.html">
-                                django
+                            <a href="http://vc2tea.com/tag/shadowsocks.html">
+                                shadowsocks
                             </a>
                         </li>
                         <li class="list-group-item tag-4">
-                            <a href="http://vc2tea.com/tag/cache.html">
-                                cache
+                            <a href="http://vc2tea.com/tag/pip.html">
+                                pip
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://vc2tea.com/tag/django.html">
+                                django
                             </a>
                         </li>
                     </ul>
